--- a/first_try.html
+++ b/first_try.html
@@ -14,7 +14,7 @@
         <section class="bottom_half">
         <h1 id="main_header">Pro-Stats are a few taps away</h1>
         <div id="sign_in_button">
-        <a id="sign_in" href="#">Sign in with Email</a>
+        <a id="sign_in" href="first_try_two.html">Sign in with Email</a>
         </div>
         <div id="log_in_container">
             <div id="google_button">
